--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,45 @@
-/* Created by: Mr. Coxall
-* Created on: Sep 2020
-* This file contains the CSS for index.html
+/* Created by: MariaG
+ * Modified by: Kukwac
+ * Created on: May 2025
+ * This CSS file defines the style for index.php
+ * ICD2O-Unit4-03-PHP-Movie
 */
+form {
+    background-color: #ffffff;
+    padding: 20px;
+    width: 80%;
+    margin-left: 10%;
+}
+h1 {
+    background-color: #77977b;
+    text-align: center;
+    padding: 20px;
+    width: 80%;
+    margin-left: 10%;
+}
+h3 {
+    background-color: #5f566e;
+    text-align: center;
+    padding: 20px;
+    width: 80%;
+    margin-left: 10%;
+}
+p {
+    width: 80%;
+    margin-left: 10%;
+}
+iframe {
+    margin-bottom: 5%;
+    background-color: #ffffff;
+    padding: 20px;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 15px;
+}
+#yellow {
+    background-color: #525c40;
+    padding: 20px;
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 30px;
+}
